--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -69,14 +69,15 @@ code,pre{font:inherit;}
 .mosaic-overlay:hover .details>h4{color:white;}
 .leftbox{text-shadow: 0 1px 0 white;border: 1px solid rgba(0, 0, 0, .1); font-size:12px;position: relative; margin-bottom: 10px;line-height: 16px; border-radius: 6px; display:block;}
 .leftboxfooter{  background-color:whitesmoke; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 2px 10px 10px;}
+.rank{position:relative; top:4px;}
 #ranks { list-style: none; margin:0px; padding: 10px 0; }
-#ranks li { padding: 2px 0 7px 12px; font:normal 15px arial, sans-serif; }
+#ranks li { padding: 2px 0 9px 12px; font:normal 15px arial, sans-serif; border-bottom: 1px solid rgb(235, 235, 235); color:gray;}
 #ranks li:last-child { border-bottom-left-radius: 6px; border-bottom-right-radius:6px; }
-#ranks img{ height:27px; width:27px; border-radius:3px; margin:4px 4px -6px 2px; }
+#ranks img{ height:27px; width:27px; border-radius:3px; margin:4px 4px -3px 2px; }
 #ranks .points{ margin: 12px 8px 0 0; }
 .points{ float:right; font-style:italic; font-size:14px; }
-.level{ font: bold 11px arial, sans-serif; }
-.name{ text-decoration:none; color:gray; }
+.level{ font: bold 11px arial, sans-serif; position:relative; bottom:-4px; }
+.name{ text-decoration:none; color:gray; font-size:12px; position:relative; bottom:-4px;}
 .commentfeed { height:300px; width: 200px; border-radius: 4px; background-color:white; vertical-align:top; position:relative; left:337px; position:absolute; }
 .span5{ display:inline-block; vertical-align: top; width:288px;}
 .span11{ display: inline-block; vertical-align: top; width: 640px;} 
