fix challenge completion page

--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -18,7 +18,7 @@
         = render "shared/sharing", { custom_style: "", title: "Just finished a section of the #{@path.name} challenge on @MetaBright and scored #{@enrollment.total_points} points", url: path_url(@path) }
     %div{ style: "display:inline-block; vertical-align:top;" }
       %div.completionnextsteps
-        %h3 Continue improving your score
+        %span Continue improving your score
         %ul
           %li
             Complete Challenge Questions
