--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -218,6 +218,7 @@ body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easte
 .completionnextsteps ul{}
 .completionnextsteps p{text-indent:15px;}
 .completionnextsteps a{font-style: italic; }
+.completionnextsteps span{font-size:18px; line-height:36px;}
 .social_toolbar img {height:20px; margin:0 2px; position:relative; top:2px; vertical-align:baseline; width:20px;}
 .socialiconholder{position:relative; margin-left:292px; bottom:6px;}
 .quizspace button{float:right;}
