--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,11 @@
     = render "layouts/head"
   %body
     = render "layouts/navbar", { no_bar: false }
-    = render "layouts/explore_modal" if current_user
-    = render "layouts/notifications_modal" if current_user
-    = render "layouts/login_modal" if not current_user
+    - if current_user
+      = render "layouts/explore_modal"
+      = render "layouts/launchpad_modal"
+    - else
+      = render "layouts/login_modal"
     %div.container.body{ style: "padding-top: 51px;" }
       - flash.each do |key, value|
         = content_tag(:div, value, :class => "alert-message #{key}")
