Finishing up notifications and cleaning up console.logs

--- a/app/views/companies/paths.html.haml
+++ b/app/views/companies/paths.html.haml
@@ -34,7 +34,7 @@
 :javascript
   $(function(){
     $(".mark_approved").on("ajax:success", function(xhr, data){
-      console.log(data.status);
+      log(data.status);
       if(data.status == true){
         $(this).text("approved");
       } else {
