--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -17,7 +17,7 @@
       %h3.brand{ style: "top:3px; position:relative;" }
         = link_to root_url, style: "font-size: 26px;" do
           = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", style: "position:absolute;")
-      - unless current_user.nil? || no_bar || params[:controller] == "sections"
+      - if current_user && show_nav_bar
         %ul.nav.navicons{ style: "margin-left:153px; bottom:5px; border-right:1px solid #56698B; height: 45px; overflow-y: hidden;" }
           %li.navitem{ style: "border-left: 0px;" }
             = link_to root_url do
@@ -32,32 +32,33 @@
             %li.navitem
               = link_to create_path do
                 = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/create.png", style: "width:22px;"
-      %ul.nav.pull-right{ style: "float:right; margin-right: 197px; " }
-        - if current_user
-          - if @enable_administration
+        %ul.nav.pull-right{ style: "float:right; margin-right: 197px; " }
+          - if current_user
+            - if @enable_administration
+              %li
+                = link_to "Admin", admin_overview_path
             %li
-              = link_to "Admin", admin_overview_path
-          %li
-            = link_to current_user do
-              = image_tag current_user.profile_pic, style: "width: 17px; height: 17px; vertical-align: middle;"
-              %span{ style: "vertical-align: middle;" }= current_user.name
-          %li
-            %div.dropdown.pull-right{ style: "padding-top: 12px;" }
-              %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();" }
-                = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/notifications3.png", style: "width: 18px; height: 18px;"
-              %ul.dropdown-menu{ role: "button", style: "padding:0; top:42px; right:-110px; min-width: 312px;" }
-                %div
-                  %div.nub
-                %div.leftboxheader Notifications
-                - notifications.each do |event|
-                  %li.notification_space
-                    %div.notification{ class: "#{event.is_read ? '' : 'notification-unread'}" }
-                      = link_to event.link do
-                        = image_tag event.image_link, class: "photo", style: "width:35px; height: 35px;"
-                        %p.notification_body= event.content
-                        %p.notification_time #{time_ago_in_words(event.created_at)} ago
-          %li
-            = link_to "Sign out", signout_path
-        - elsif params[:controller] == "paths"
-          %li
-            %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px; text-shadow:none; color:white;" } Sign in
+              = link_to current_user do
+                = image_tag current_user.profile_pic, style: "width: 17px; height: 17px; vertical-align: middle;"
+                %span{ style: "vertical-align: middle;" }= current_user.name
+            %li
+              %div.dropdown.pull-right{ style: "padding-top: 12px;" }
+                %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();" }
+                  = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/notifications3.png", style: "width: 18px; height: 18px;"
+                %ul.dropdown-menu{ role: "button", style: "padding:0; top:42px; right:-110px; min-width: 312px;" }
+                  %div
+                    %div.nub
+                  %div.leftboxheader Notifications
+                  - notifications.each do |event|
+                    %li.notification_space
+                      %div.notification{ class: "#{event.is_read ? '' : 'notification-unread'}" }
+                        = link_to event.link do
+                          = image_tag event.image_link, class: "photo", style: "width:35px; height: 35px;"
+                          %p.notification_body= event.content
+                          %p.notification_time #{time_ago_in_words(event.created_at)} ago
+            %li
+              = link_to "Sign out", signout_path
+        - if current_user.nil? && show_sign_in
+          %ul.nav.pull-right{ style: "float:right; margin-right: 197px; " }
+            %li
+              %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px; text-shadow:none; color:white;" } Sign in
