--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -24,5 +24,5 @@
             Complete Challenge Questions
             %p= link_to "#{@available_crs} available", path_url(@section.path, completed: true)
           %li Take additional sections
-          %p= link_to "#{@unlocked_sections} of #{@section.path.sections.size} sections unlocked", path_url(@section.path, completed: true) 
+          %p= link_to "#{@unlocked_sections} of #{@section.path.sections.size} sections unlocked", path_url(@section.path, completed: true, type: 2) 
     = link_to "Continue", path_url(@section.path, completed: "true"), class: "button button-info", style: "float: right;"
