--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -2,4 +2,7 @@
   $(function(){
     $(".explorenewusercontent").hide().fadeIn(1000);
   });
+:css
+  .explorecontainer { margin: 60px auto 12px auto; }
+  .modal_close { display: none; }
 = render "personas/explore"
