--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -48,13 +48,13 @@
         %div.leftboxfooter{style:"padding-top: 6px"}
           %ul
             %li Location: #{@user.location || "A galaxy far, far away..."}
-            - if @user.link
+            - unless @user.link.blank?
               %li Link: <a href='#{@user.link}' target='_newtab'>#{truncate(@user.link)}</a>
-            - if @user.education 
+            - unless @user.education.blank? 
               %li Education: #{@user.education}
-            - if @user.company_name
+            - unless @user.company_name.blank?
               %li Company: #{@user.company_name}  
-            - if @user.title
+            - unless @user.title.blank?
               %li Title: #{@user.title}
     %div.span11
       %div.newsfeed{ style: "min-height: 285px;" }
