--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -77,3 +77,5 @@
           %br
           %span Streak
       %div.messagespace{ style: "text-align: right; margin: 12px 0px 0px 25px; width: 258px;" }
+        - if @task.resource
+          %p= @task.resource
