Fixing notification bar for new user.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -41,10 +41,10 @@
                 = image_tag current_user.profile_pic, style: "width: 17px; height: 17px; vertical-align: middle;"
                 %span{ style: "vertical-align: middle;" }= current_user.name
             %li
-              %div.dropdown.pull-right{ style: "padding-top: 12px;" }
+              %div.dropdown.pull-right{ style: "padding-top: 10px;" }
                 %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();" }
                   = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/notifications3.png", style: "width: 18px; height: 18px;"
-                %ul.dropdown-menu{ role: "button", style: "padding:0; top:42px; right:-110px; min-width: 312px;" }
+                %ul.dropdown-menu{ role: "button", style: "padding:0; top:42px; right:-110px; min-width: 312px; min-height: 135px;" }
                   %div
                     %div.nub
                   %div.leftboxheader Notifications
